@@ -43,23 +43,28 @@ int __cdecl _stat64i32(const char *_Name,struct _stat64i32 *_Stat)
 during CRT compilation is plainly broken.  Need an appropriate
 implementation to provide users the ability of compiling the
 CRT only with 32-bit time_t behavior. */
+/* FIXME-2: Don't optimize due to strict-aliasing issues. */
 #if _INTEGRAL_MAX_BITS < 64  || defined(_USE_32BIT_TIME_T)
-int __cdecl fstat(int _Desc,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+fstat(int _Desc,struct stat *_Stat)
 {
   return _fstat32(_Desc,(struct _stat32 *)_Stat);
 }
 
-int __cdecl stat(const char *_Filename,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+stat(const char *_Filename,struct stat *_Stat)
 {
   return _stat32(_Filename,(struct _stat32 *)_Stat);
 }
 #else
-int __cdecl fstat(int _Desc,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+fstat(int _Desc,struct stat *_Stat)
 {
   return _fstat64i32(_Desc,(struct _stat64i32 *)_Stat);
 }
 
-int __cdecl stat(const char *_Filename,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+stat(const char *_Filename,struct stat *_Stat)
 {
   return _stat64i32(_Filename,(struct _stat64i32 *)_Stat);
 }
