@@ -25,13 +25,16 @@ int __cdecl _wstat64i32(const wchar_t *_Name,struct _stat64i32 *_Stat)
 during CRT compilation is plainly broken.  Need an appropriate
 implementation to provide users the ability of compiling the
 CRT only with 32-bit time_t behavior. */
+/* FIXME-2: Don't optimize due to strict-aliasing issues. */
 #if _INTEGRAL_MAX_BITS < 64 || defined(_USE_32BIT_TIME_T)
-int __cdecl wstat(const wchar_t *_Filename,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+wstat(const wchar_t *_Filename,struct stat *_Stat)
 {
   return _wstat32(_Filename,(struct _stat32 *)_Stat);
 }
 #else
-int __cdecl wstat(const wchar_t *_Filename,struct stat *_Stat)
+int __cdecl __MINGW_ATTRIB_NO_OPTIMIZE
+wstat(const wchar_t *_Filename,struct stat *_Stat)
 {
   return _wstat64i32(_Filename,(struct _stat64i32 *)_Stat);
 }
