@@ -1,3 +1,9 @@
+2009-07-31  Ozkan Sezer  <sezeroz@gmail.com>
+
+	* _fstat64i32.c (stat, fstat): Do not optimize due to strict aliasing
+	issues.
+	* _fwstat64i32.c(wstat): Likewise.
+
 2009-07-29  Kai Tietz  <kai.tietz@onevision.com>
 
 	* intrincs/__stosd.c: New.
